More fixes